--- a/assets/sass/_media.scss
+++ b/assets/sass/_media.scss
@@ -1,13 +1,5 @@
 @import 'icons';
 
-audio {
-  max-width: 100%;
-  display: block;
-  margin-left: 50%;
-  margin-bottom: 8px;
-  transform: translateX(-50%);
-}
-
 #container {
   display: grid;
   margin: 0 auto;
@@ -180,7 +172,7 @@ audio {
   .audio__player {
     width: 250px;
     height: 338px;
-    margin: 0 auto;
+    margin: 10px auto;
     background-color: rgb(255, 255, 255);
     border: 1px solid rgb(218, 223, 227);
     box-sizing: content-box;
